<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@drawable/rounded_white"
    app:behavior_hideable="true"
    app:behavior_peekHeight="80dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/playlistTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_playlist_add_black_24dp"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:text="@string/playlist"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@id/addUrlTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/addUrlTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_add_black_24dp"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:text="@string/addLink"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@id/cancelMbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistTv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelMbtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/cancel"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addUrlTv"
        app:strokeColor="@android:color/holo_red_dark" />
</androidx.constraintlayout.widget.ConstraintLayout>